--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -1,4 +1,4 @@
-<h3>New Artist </h3>
+<h3>Edit Artist </h3>
 <%= form_for(@artist) do |f| %>
     <%= f.label :name %>
     <%= f.text_field :name%>
